[gd_scene load_steps=48 format=3 uid="uid://mmqfhq76w7b2"]

[ext_resource type="Script" path="res://Scripts/Nonogram/Nonogram.gd" id="1_u5rw4"]
[ext_resource type="Script" path="res://Scripts/Nonogram/IceSpawner.gd" id="2_cqf0b"]
[ext_resource type="Script" path="res://Scripts/Nonogram/HintSpawner.gd" id="3_juji8"]
[ext_resource type="Texture2D" uid="uid://b165583d622e2" path="res://Sprites/Numbers/0.png" id="4_1tyju"]
[ext_resource type="Texture2D" uid="uid://cbp36fb1pcyoo" path="res://Sprites/Numbers/1.png" id="5_f7wjy"]
[ext_resource type="Texture2D" uid="uid://cxtlh082in2nq" path="res://Sprites/Numbers/2.png" id="6_bt3m4"]
[ext_resource type="Texture2D" uid="uid://dd7si6yi34k3x" path="res://Sprites/Numbers/3.png" id="7_lh2ug"]
[ext_resource type="Texture2D" uid="uid://uak6t7wkituo" path="res://Sprites/Numbers/4.png" id="8_gpquv"]
[ext_resource type="Texture2D" uid="uid://cx2igmgoj1g5y" path="res://Sprites/Numbers/5.png" id="9_287g3"]
[ext_resource type="Texture2D" uid="uid://cmt3w6aosh41t" path="res://Sprites/Numbers/6.png" id="10_2sfnp"]
[ext_resource type="Texture2D" uid="uid://biy2i1uygt076" path="res://Sprites/Numbers/7.png" id="11_574or"]
[ext_resource type="Texture2D" uid="uid://dlx60sgic260i" path="res://Sprites/Numbers/8.png" id="12_gkols"]
[ext_resource type="Texture2D" uid="uid://ccilhlw6470my" path="res://Sprites/Numbers/9.png" id="13_oowcv"]
[ext_resource type="Texture2D" uid="uid://bcwdqvs00dvsg" path="res://Sprites/Numbers/10.png" id="14_1vqhi"]
[ext_resource type="Script" path="res://Scripts/UI/Camera.gd" id="15_eq0m8"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="16_pnsfx"]
[ext_resource type="Texture2D" uid="uid://cdp6ink0vg4lt" path="res://Sprites/player2.png" id="17_q3b7w"]
[ext_resource type="Texture2D" uid="uid://cxuub6380rlkd" path="res://Sprites/player.png" id="18_hc07y"]
[ext_resource type="Script" path="res://Scripts/PlayerRange.gd" id="19_twpxy"]
[ext_resource type="PackedScene" uid="uid://d3pe13e6t8y47" path="res://Scenes/Prefabs/safetyblock.tscn" id="20_khlqe"]
[ext_resource type="PackedScene" uid="uid://diss8fgqx71ao" path="res://Scenes/Prefabs/shadow.tscn" id="21_pycuj"]
[ext_resource type="Script" path="res://Scripts/UI/ConditionalUI.gd" id="22_pwi5t"]
[ext_resource type="Script" path="res://Scripts/UI/Lives.gd" id="23_de12q"]
[ext_resource type="Material" uid="uid://b5riljx6xlo5u" path="res://Shaders/Wiggler.material" id="24_3350a"]
[ext_resource type="Texture2D" uid="uid://b8quwtif2cb5x" path="res://Sprites/heart.png" id="25_mtwqf"]
[ext_resource type="Texture2D" uid="uid://cqr3vyooo3qbx" path="res://Sprites/freeze.png" id="26_s33yw"]
[ext_resource type="Script" path="res://Scripts/UI/Freezeray.gd" id="27_1im82"]
[ext_resource type="Texture2D" uid="uid://dhnvmmyhyruu7" path="res://Sprites/UI/menu.png" id="28_i6ejp"]
[ext_resource type="Script" path="res://Scripts/UI/SceneChangeButton.gd" id="29_gdkmk"]
[ext_resource type="Texture2D" uid="uid://d4i7q85ca63qy" path="res://Sprites/UI/next.png" id="30_n7mls"]
[ext_resource type="Texture2D" uid="uid://x4iyx2yhtc5g" path="res://Sprites/UI/restart.png" id="31_jb6au"]
[ext_resource type="Script" path="res://Scripts/UI/TutorialController.gd" id="32_niver"]
[ext_resource type="Texture2D" uid="uid://c3qnqgijsrh16" path="res://Sprites/UI/tutorial_bg.png" id="33_yw2io"]
[ext_resource type="Script" path="res://Scripts/UI/TutorialButton.gd" id="34_5eq6r"]
[ext_resource type="Shader" path="res://Shaders/water.gdshader" id="35_xsfxw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0jtxs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_q3b7w")
}, {
"duration": 1.0,
"texture": ExtResource("18_hc07y")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_6d0ho"]
size = Vector3(0.7, 1, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_8jdp3"]
size = Vector3(2.3, 1, 2.3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jlkv1"]
bg_color = Color(0, 0, 0, 0.301961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84yq7"]
bg_color = Color(0.0627451, 0.231373, 0.4, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jgrte"]
render_priority = 0
shader = ExtResource("35_xsfxw")
shader_parameter/OCTAVE = 6
shader_parameter/mulscale = 7.0
shader_parameter/height = 0.6
shader_parameter/tide = 0.1
shader_parameter/foamthickness = 0.05
shader_parameter/timescale = 0.3
shader_parameter/waterdeep = 0.3
shader_parameter/WATER_COL = Color(0, 0.443137, 0.678431, 1)
shader_parameter/WATER2_COL = Color(0, 0.4, 0.615686, 1)
shader_parameter/FOAM_COL = Color(0, 0.529412, 0.807843, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_sr2eo"]
lightmap_size_hint = Vector2i(252, 252)
material = SubResource("ShaderMaterial_jgrte")
uv2_padding = 1.07
size = Vector2(60, 60)

[sub_resource type="Curve" id="Curve_ylk3t"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.640719, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_lstgy"]
curve = SubResource("Curve_ylk3t")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pnm7h"]
emission_shape = 3
emission_box_extents = Vector3(20, 0.1, 20)
gravity = Vector3(0, -1, 0)
scale_curve = SubResource("CurveTexture_lstgy")
turbulence_enabled = true
turbulence_noise_strength = 0.3
turbulence_noise_scale = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_81tdd"]
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 2.2

[sub_resource type="SphereMesh" id="SphereMesh_y3ojn"]
material = SubResource("StandardMaterial3D_81tdd")
radius = 0.03
height = 0.03

[node name="Node3D" type="Node3D"]

[node name="Nonogram" type="Node" parent="."]
script = ExtResource("1_u5rw4")
puzzle_index = 7
NONOGRAM_HEIGHT = 10
NONOGRAM_WIDTH = 10

[node name="IceSpawner" type="Node" parent="Nonogram"]
script = ExtResource("2_cqf0b")

[node name="Hints" type="Node" parent="Nonogram"]
script = ExtResource("3_juji8")
hint_sprites = Array[Texture]([ExtResource("4_1tyju"), ExtResource("5_f7wjy"), ExtResource("6_bt3m4"), ExtResource("7_lh2ug"), ExtResource("8_gpquv"), ExtResource("9_287g3"), ExtResource("10_2sfnp"), ExtResource("11_574or"), ExtResource("12_gkols"), ExtResource("13_oowcv"), ExtResource("14_1vqhi")])

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("player_node")]
transform = Transform3D(1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 5, 4, 12)
script = ExtResource("15_eq0m8")
player_node = NodePath("../Player")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
input_ray_pickable = false
script = ExtResource("16_pnsfx")

[node name="PlayerSprite" type="AnimatedSprite3D" parent="Player"]
transform = Transform3D(0.8, 0, 0, 0, 0.4, 0.69282, 0, -0.69282, 0.4, 0, 0, -0.2)
billboard = 1
sprite_frames = SubResource("SpriteFrames_0jtxs")
autoplay = "default"

[node name="PlayerCollision" type="CollisionShape3D" parent="Player"]
shape = SubResource("BoxShape3D_6d0ho")

[node name="Range" type="Area3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
input_ray_pickable = false
script = ExtResource("19_twpxy")

[node name="RangeBox" type="CollisionShape3D" parent="Player/Range"]
shape = SubResource("BoxShape3D_8jdp3")

[node name="SafetyBlock" parent="." instance=ExtResource("20_khlqe")]

[node name="Shadow" parent="." node_paths=PackedStringArray("follow_node") instance=ExtResource("21_pycuj")]
follow_node = NodePath("../Player")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.496823, 0.867852, 0, -0.867852, -0.496823, 5, 5.1723, 10.3439)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("22_pwi5t")
my_state = 1

[node name="Lives" type="HBoxContainer" parent="CanvasLayer/GameUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -75.0
offset_right = 346.0
offset_bottom = -11.0
grow_vertical = 0
script = ExtResource("23_de12q")

[node name="Life" type="TextureRect" parent="CanvasLayer/GameUI/Lives"]
material = ExtResource("24_3350a")
layout_mode = 2
texture = ExtResource("25_mtwqf")
expand_mode = 2

[node name="Life2" type="TextureRect" parent="CanvasLayer/GameUI/Lives"]
material = ExtResource("24_3350a")
layout_mode = 2
texture = ExtResource("25_mtwqf")
expand_mode = 2

[node name="Life3" type="TextureRect" parent="CanvasLayer/GameUI/Lives"]
material = ExtResource("24_3350a")
layout_mode = 2
texture = ExtResource("25_mtwqf")
expand_mode = 2

[node name="Life4" type="TextureRect" parent="CanvasLayer/GameUI/Lives"]
material = ExtResource("24_3350a")
layout_mode = 2
texture = ExtResource("25_mtwqf")
expand_mode = 2

[node name="Life5" type="TextureRect" parent="CanvasLayer/GameUI/Lives"]
material = ExtResource("24_3350a")
layout_mode = 2
texture = ExtResource("25_mtwqf")
expand_mode = 2

[node name="Freezeray" type="TextureRect" parent="CanvasLayer/GameUI"]
material = ExtResource("24_3350a")
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -154.0
offset_right = -19.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("26_s33yw")
expand_mode = 1
script = ExtResource("27_1im82")

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/GameUI/Freezeray"]
layout_mode = 0
offset_left = -22.0
offset_top = 134.0
offset_right = 111.0
offset_bottom = 151.0
rotation = -1.5708
theme_override_styles/background = SubResource("StyleBoxFlat_jlkv1")
theme_override_styles/fill = SubResource("StyleBoxFlat_84yq7")
max_value = 2.0
value = 2.0
show_percentage = false

[node name="WinUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("22_pwi5t")
my_state = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/WinUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -178.0
offset_top = -169.0
offset_right = 178.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100

[node name="LevelSelect" type="TextureRect" parent="CanvasLayer/WinUI/HBoxContainer"]
material = ExtResource("24_3350a")
layout_mode = 2
texture = ExtResource("28_i6ejp")
script = ExtResource("29_gdkmk")
to_scene = "res://Scenes/LevelSelect.tscn"

[node name="NextLevel" type="TextureRect" parent="CanvasLayer/WinUI/HBoxContainer"]
material = ExtResource("24_3350a")
layout_mode = 2
texture = ExtResource("30_n7mls")
script = ExtResource("29_gdkmk")
to_scene = "res://Scenes/Levels/9.tscn"

[node name="LoseUI" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("22_pwi5t")
my_state = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/LoseUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="LevelSelect" type="TextureRect" parent="CanvasLayer/LoseUI/HBoxContainer"]
material = ExtResource("24_3350a")
layout_mode = 2
texture = ExtResource("28_i6ejp")
script = ExtResource("29_gdkmk")
to_scene = "res://Scenes/LevelSelect.tscn"

[node name="RestartLevel" type="TextureRect" parent="CanvasLayer/LoseUI/HBoxContainer"]
material = ExtResource("24_3350a")
layout_mode = 2
texture = ExtResource("31_jb6au")
script = ExtResource("29_gdkmk")
to_scene = "res://Scenes/Main.tscn"

[node name="Tutorial" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("32_niver")

[node name="BG" type="TextureRect" parent="CanvasLayer/Tutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.5
offset_top = -301.0
offset_right = 283.5
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("33_yw2io")

[node name="Pages" type="Control" parent="CanvasLayer/Tutorial"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Page1" type="RichTextLabel" parent="CanvasLayer/Tutorial/Pages"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -255.0
offset_right = 220.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Welcome to Piceross!

[img]res://icon.svg[/img]"

[node name="Page2" type="RichTextLabel" parent="CanvasLayer/Tutorial/Pages"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -255.0
offset_right = 220.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Different text"

[node name="ProceedButton" type="TextureRect" parent="CanvasLayer/Tutorial"]
material = ExtResource("24_3350a")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 90.0
offset_right = 64.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("30_n7mls")
script = ExtResource("34_5eq6r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_sr2eo")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.46135, 0)
amount = 400
lifetime = 20.0
preprocess = 100.0
visibility_aabb = AABB(-4, -4, -4, 8, 8, 15)
process_material = SubResource("ParticleProcessMaterial_pnm7h")
draw_pass_1 = SubResource("SphereMesh_y3ojn")

[node name="Enemies" type="Node" parent="."]

[connection signal="area_entered" from="Player/Range" to="Player/Range" method="_on_area_entered"]
[connection signal="area_exited" from="Player/Range" to="Player/Range" method="_on_area_exited"]
[connection signal="gui_input" from="CanvasLayer/GameUI/Freezeray" to="CanvasLayer/GameUI/Freezeray" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/GameUI/Freezeray" to="CanvasLayer/GameUI/Freezeray" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/GameUI/Freezeray" to="CanvasLayer/GameUI/Freezeray" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/WinUI/HBoxContainer/LevelSelect" to="CanvasLayer/WinUI/HBoxContainer/LevelSelect" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/WinUI/HBoxContainer/LevelSelect" to="CanvasLayer/WinUI/HBoxContainer/LevelSelect" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/WinUI/HBoxContainer/LevelSelect" to="CanvasLayer/WinUI/HBoxContainer/LevelSelect" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/WinUI/HBoxContainer/NextLevel" to="CanvasLayer/WinUI/HBoxContainer/NextLevel" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/WinUI/HBoxContainer/NextLevel" to="CanvasLayer/WinUI/HBoxContainer/NextLevel" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/WinUI/HBoxContainer/NextLevel" to="CanvasLayer/WinUI/HBoxContainer/NextLevel" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/LoseUI/HBoxContainer/LevelSelect" to="CanvasLayer/LoseUI/HBoxContainer/LevelSelect" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/LoseUI/HBoxContainer/LevelSelect" to="CanvasLayer/LoseUI/HBoxContainer/LevelSelect" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/LoseUI/HBoxContainer/LevelSelect" to="CanvasLayer/LoseUI/HBoxContainer/LevelSelect" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/LoseUI/HBoxContainer/RestartLevel" to="CanvasLayer/LoseUI/HBoxContainer/RestartLevel" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/LoseUI/HBoxContainer/RestartLevel" to="CanvasLayer/LoseUI/HBoxContainer/RestartLevel" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/LoseUI/HBoxContainer/RestartLevel" to="CanvasLayer/LoseUI/HBoxContainer/RestartLevel" method="_on_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/Tutorial/ProceedButton" to="CanvasLayer/Tutorial/ProceedButton" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/Tutorial/ProceedButton" to="CanvasLayer/Tutorial/ProceedButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Tutorial/ProceedButton" to="CanvasLayer/Tutorial/ProceedButton" method="_on_mouse_exited"]
